New tools dedicated to WPF and Silverlight effects : - Perspective.PixelShader.Compiler : a pixel shader compiler - This is a C++ project. - Perspective.PixelShader.BuildTask : a custom MSBuild task. So now there is no more need to use the Shader Effects BuildTask and Templates of the WPF Futures project (which has not been updated for .NET 4.0).

--- a/FxGenerator/Perspective.PixelShader.BuildTask/Perspective.PixelShader.BuildTask.csproj
+++ b/FxGenerator/Perspective.PixelShader.BuildTask/Perspective.PixelShader.BuildTask.csproj
@@ -49,6 +49,12 @@
     <Compile Include="PixelShaderBuildTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Perspective.PixelShader.Compiler\Perspective.PixelShader.Compiler.vcxproj">
+      <Project>{3DF02FCE-8E4F-40A7-836D-2B10942D92DD}</Project>
+      <Name>Perspective.PixelShader.Compiler</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
