- 64 bits compatibility (effect generation and compilation now works on Windows 7 64 bits) - Binaries now contain version information - Source code now uses the new .NET 4 API for MSBuild (Microsoft.Build.Evaluation.ProjectCollection class instead of the deprecated Microsoft.Build.BuildEngine.Engine class) - A .proj file is now systematically generated for WPF and for Silverlight - Convolution3X3Filter now compiles with the latest DirectX 9 versions (X3025 error fixed) - FxDemo.xaml now uses all the Perspective FX filters

--- a/FxGenerator/Perspective.PixelShader.Compiler/Perspective.PixelShader.Compiler.vcxproj.filters
+++ b/FxGenerator/Perspective.PixelShader.Compiler/Perspective.PixelShader.Compiler.vcxproj.filters
@@ -18,10 +18,18 @@
     <ClInclude Include="PixelShaderCompiler.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="VersionInfo.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PixelShaderCompiler.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="VersionInfo.rc">
+      <Filter>Fichiers de ressources</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
