- .NET 4 API for MSBuild usage revision - EffectLibraryBuilder methods : new parameter IEnumerable<ILogger> loggers (the ConsoleLogger is now instantiated by the FxGeneratorCmd program)

--- a/FxGenerator/FxGeneratorCmd/FxGeneratorCmd.csproj
+++ b/FxGenerator/FxGeneratorCmd/FxGeneratorCmd.csproj
@@ -220,6 +220,8 @@
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Build" />
+    <Reference Include="Microsoft.Build.Framework" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
